finishing the login and register in two diff user

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Material Design Bootstrap</title>
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -28,6 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/css/mdb.min.css"
       rel="stylesheet"
     />
+    <!-- Your custom styles (optional) -->
     <title>React App</title>
   </head>
   <body>
