adding get and post ads

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,12 @@
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Material Design Bootstrap</title>
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    /> -->
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
