--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design Bootstrap</title>
+    <title>HanaPH</title>
 
     <!-- <link
       rel="stylesheet"
